--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.3.10",
+    "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.2",
-    
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.9",
